@@ -69,7 +69,13 @@ with DAG('docker_dag2', default_args=default_args, schedule_interval="*/10 * * *
                 api_version='auto',
                 auto_remove=False,
                 command="/bin/sleep 600",
-                docker_url='unix:///var/run/docker.sock'
+                docker_url='unix:///var/run/docker.sock',
+                executor_config={
+                        "MesosExecutor": {
+                                "cpus": 2.0,
+                                "mem_limit": 2048
+                        }
+                }         
         )
 
         t2
