@@ -1,5 +1,9 @@
 ## Changelog
 
+## master
+
+- Add: execute_config support. 
+
 ## v0.1.2
 
 - Add: Documentation
